# RustyGear

./: LICENSE
SampleApp/: Cargo.toml
SampleApp/src/: component.rs  ecs.rs  entity.rs  graphics.rs  graphics_tutorial.rs  input.rs  main.rs  resources.rs  shader.wgsl  texture.rs
SampleApp/src/components/: camera.rs  component.rs  controller.rs  mesh.rs  mod.rs  transform.rs
SampleApp/src/resources/: .gitattributes  .gitignore
SampleApp/src/resources/prefabs/: ortho_camera.json  spaceship.json  spaceship2.json
SampleApp/src/resources/shaders/: compile.bat  shader.wgsl  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  triangle.wgsl
SampleApp/src/systems/: control.rs  render.rs  system.rs
