[package]
name = "SampleApp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9"
futures = "0.3.15"

[dependencies.sdl2]
version = "0.34.5"
features = ["raw-window-handle"]

[dependencies.bytemuck]
version = "1.4.0"
features = [ "derive" ]