[package]
name = "SampleApp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9"
wgpu-types = { version = "0.9.0", features = ["serde"] }
futures = "0.3.15"
image = "0.23.14"
anyhow = "1.0.35"
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sdl2 = { version = "0.34.5", features = ["raw-window-handle"]}
bytemuck = { version = "1.4.0", features = ["derive"]}
anymap = "0.12.1"
env_logger = "0.9.0"
